--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Aura Portfolio</title>
+    <title>Zaira Portfolio</title>
     
     <!--Bootstrap Stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!--Our own CSS stylesheet -->
-    <link rel="stylesheet" href="./assets/css/style.css" media="screen">
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
 
 </head>
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <!--Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand" href="index.html" id="logo">Aura Araya .S</a>
+            <a class="navbar-brand" href="index.html" id="logo">Zaira Sirinya S.</a>
             <button class="navbar-toggler" type="button" data-toggle="collaspe" data-target="#navbarTogglerDemo01"
             aria-controls="navbar-brand" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                             <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
                         </div>
                     </div>
-                    <button class="sumbit-btn">Sumbit</button>
+                    <button class="submit-btn">Sumbit</button>
                 </form>
             </div>
             </section>
@@ -83,7 +83,7 @@
     <footer class="footer">
         <div class="two-toned-footer-color"></div>
         <p class="text-muted text-muted-footer text-center">
-            &copy; Copyright 2020 Aura
+            &copy; Copyright 2020 Zaira
         </p>
     </footer>
     <!--End of footer-->
