--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Aura Portfolio</title>
+    <title>Zaira Portfolio</title>
     
     <!--Bootstrap Stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!--Our own CSS stylesheet -->
-    <link rel="stylesheet" href="./assets/css/style.css" media="screen">
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
 
 </head>
 
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <!--Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand" href="index.html" id="logo">Aura Araya .S</a>
+            <a class="navbar-brand" href="index.html" id="logo">Zaira Sirinya S.</a>
             <button class="navbar-toggler" type="button" data-toggle="collaspe" data-target="#navbarTogglerDemo01"
             aria-controls="navbar-brand" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,20 +53,28 @@
                 <article class="block">
                     <h1 class="block-header">About me</h1>
                     <hr />
-                    <img src="./assets/imgs/IMG_0913.jpg" alt="my pic" id="about-image"/>
-                    <p>
-                        Hi I am Aura, I am 9 years old I am turning 10 on September 4th, I was born in September 4th 2010.
-                        I like playing Roblox and Meow Playground it is very fun.
-                        My Dad wants me to code but I like doing it a little bit.
-                        I am in 4th grade in Elementary school, I will be at 5th grade next 3 weeks.
-                        I like Math and I am smart. I like cute animals for example bunny's and baby deers.
+                    <img src="./assets/imgs/IMG_2726.JPG" alt="my pic" id="about-image"/>
+                    <p>Hi my name is Zaira i am 8 years old i am turning 9 on nov 23.
+                        I was born on 2011 nov 23.
+                        Now it's the 2020.
+                        I love girl toys well not to much.
+                        My fav pet is bunnys,dogs and Cats.
+                        I like them more whem there are 1 to 4 years old.
+                        but bunnys there most my best friends!
+                        my fav animal is dophines cause there are so playful,
+                        and fun witch is the same word.
                     </p>
-                    <p>
-                        GO TO MY YOUTUBE CHANNEL NOW! Type Aura Gamer! on the search video thingy.
-                        Also subscribe my youtube channel CAUSE, I WILL TEACH YOU TRICKS IN GAMES.
-                        SO have fun and also like with a thumbs up not a thumbs down,
-                        you can also click the bell if you want!
-                    </p>
+                        <br />
+                    <p> My fav thing to eat is Mac and Cheese.
+                        My fav thing drink is water and sometimes good drinks,
+                        well can't tell my secret.
+                        My fav thing to do is play Roblox and Meowground.
+                        My fav games are Roblox and Meow Playground.
+                        My fav thing to play on Roblox is,
+                        Adopt Me, other Roblox games , Piggy Alpa,
+                         robux games, and Club Roblox.
+                   </p>
+                    
                 </article>
             </div>
         </section>
@@ -77,7 +85,7 @@
     <footer class="footer">
         <div class="two-toned-footer-color"></div>
         <p class="text-muted text-muted-footer text-center">
-            &copy; Copyright 2020 Aura
+            &copy; Copyright 2020 Zaira
         </p>
     </footer>
     <!--End of footer-->
