--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Aura Portfolio</title>
+    <title>Zaira Portfolio</title>
     
     <!--Bootstrap Stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Our own CSS stylesheet -->
-    <link rel="stylesheet" href="./assets/css/style.css" media="screen">
+    <link rel="stylesheet" href="./assets/css/styles.css" media="screen">
 
 </head>
 
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <!--Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand" href="index.html" id="logo">Aura Araya S.</a>
+            <a class="navbar-brand" href="index.html" id="logo">Zaira Sirinya S.</a>
             <button class="navbar-toggler" type="button" data-toggle="collaspe" data-target="#navbarTogglerDemo01"
             aria-controls="navbar-brand" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,24 +53,24 @@
                     <hr />
                     <div class="row">
                         <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="./assets/imgs/pngkey.com-dog-png-28708.png" alt="Cute doggy" id="pic">
+                            <img class="img-fluid port-image" src="./assets/imgs/white-and-gray-dolphin-on-blue-water-64219.jpg" alt="cute fav Dolphin" id="pic">
                         </div>
 
                         <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="./assets/imgs/adorable-1852860_640.jpg" alt="Cute reddy panda" id="pic">
+                            <img class="img-fluid port-image" src="./assets/imgs/bunny-cute-detail-53966.jpg" alt="Cute bunny" id="pic">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6 col-md-12 col-lg-6">
-                            <img class="img-fluid port-image" src="./assets/imgs/chicks-5014152_640.jpg" alt="Fat Daddy Chick" id="pic">
+                            <img class="img-fluid port-image" src="./assets/imgs/Animals-Cute-Red-Panda-Avatar-500x500.jpg" alt="Cute Red Panda" id="pic">
                         </div>
                             <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="./assets/imgs/hiclipart.com.png" alt="Pink animate bow" id="pic">
+                                <img class="img-fluid port-image" src="./assets/imgs/animal-bright-bunny-chamomile-372166.jpg" alt="Cute Bunny!" id="pic">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-6 col-md-12 col-lg-6">
-                                <img class="img-fluid port-image" src="./assets/imgs/rabbit-1915918_640.jpg" alt="Cute bunny" id="pic">
+                                <img class="img-fluid port-image" src="./assets/imgs/adorable-animal-animal-photography-735423.jpg" alt=Cute kitten" id="pic">
                             </div>
                         </div>
                 </article>
